--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PBO_TR
 excludes=
+file.reference.jbcrypt-0.4.jar=C:\\Users\\HP\\Downloads\\jbcrypt-0.4.jar
+file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\HP\\Downloads\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-9.5.0.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
