--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,13 +39,15 @@ file.reference.jbcrypt-0.4.jar=C:\\Users\\HP\\Downloads\\jbcrypt-0.4.jar
 file.reference.jbcrypt-0.4.jar-1=C:\\Users\\raysu\\Downloads\\jbcrypt-0.4.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\HP\\Downloads\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\raysu\\Downloads\\mysql-connector-j-9.5.0.jar
+file.reference.pdfbox-app-2.0.35.jar=C:\\Users\\HP\\Downloads\\pdfbox-app-2.0.35.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.5.0.jar}:\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
-    ${file.reference.jbcrypt-0.4.jar-1}
+    ${file.reference.jbcrypt-0.4.jar-1}:\
+    ${file.reference.pdfbox-app-2.0.35.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
