alamak pica pagii

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.jbcrypt-0.4.jar-1=C:\\Users\\raysu\\Downloads\\jbcrypt-0.4.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\HP\\Downloads\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\raysu\\Downloads\\mysql-connector-j-9.5.0.jar
 file.reference.pdfbox-app-2.0.35.jar=C:\\Users\\HP\\Downloads\\pdfbox-app-2.0.35.jar
+file.reference.pdfbox-app-2.0.35.jar-1=C:\\Users\\raysu\\Downloads\\pdfbox-app-2.0.35.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
     ${file.reference.jbcrypt-0.4.jar-1}:\
-    ${file.reference.pdfbox-app-2.0.35.jar}
+    ${file.reference.pdfbox-app-2.0.35.jar}:\
+    ${file.reference.pdfbox-app-2.0.35.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
